--- a/templates/404.html
+++ b/templates/404.html
@@ -1,28 +1,18 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Error 404 - Página no encontrada</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            text-align: center;
-            padding: 50px;
-        }
-        h1 {
-            font-size: 48px;
-            margin-bottom: 20px;
-        }
-        p {
-            font-size: 18px;
-            margin-bottom: 20px;
-        }
-    </style>
-</head>
-<body>
-    <h1>Error 404 - Página no encontrada</h1>
-    <p>Lo sentimos, la página que buscas no se encuentra en el servidor.</p>
-</body>
-</html>
+{% extends 'layout2.html' %}
+
+
+{% block content %}
+{%import "_macros.html" as macros%}
+<div class="container">
+    <div class="row justify-content-center align-items-center min-vh-100">
+        <div class="col-md-6">
+            <div class="text-center">
+                <h1 class="display-1">404</h1>
+                <p class="lead">Página no encontrada</p>
+                <a class="btn btn-primary" href="/">Volver a la página de inicio</a>
+            </div>
+        </div>
+    </div>
+</div>
+
+{% endblock %}
