--- a/templates/_macros.html
+++ b/templates/_macros.html
@@ -1,15 +1,16 @@
-{%macro datos(name, placeholder, type="text")%}
-<p><input name="{{name}}" placeholder="{{placeholder}}" type="{{type}}"></p>
+{%macro datos(name,placeholder,type="text")%}
+<p><input name="{{name}}" placeholder="{{placeholder}}"  type="{{type}}"></p>
 {%endmacro%}
 
 
-{%macro input_form(field)%}
+{%macro input_Form(field)%}
     <td>{{field.label}}</td>
     <dd>{{field(**kwargs)|safe}}</dd>
 {%if field.errors%}
-<u>
+<ul>
     {%for error in field.errors%}
-    <li style="color:red">{{error}}</li>    {%endfor%}
-</u>
+    <li style="color:red">{{error}}</li>{%endfor%}
+</ul>
 {%endif%}
+
 {%endmacro%}
