--- a/templates/alumnos.html
+++ b/templates/alumnos.html
@@ -1,19 +1,22 @@
-{% extends 'layout2.html' %}
-{% block content %}
-{% import "_macros.html" as macros %}
-    <h1>Alumnos</h1>
-    <form action="" method="post">
-        {{form.csrf_token}}
-        <input type="hidden" name="csrf_token" value="{{csrf_token()}}"/>
-        {{macros.input_form(form.nombre,class="form-control")}}
-        {{macros.input_form(form.apaterno,class="form-control")}}
-        {{macros.input_form(form.email,class="form-control")}}
-        <input type="submit" name="btn1">
+
+{%extends "layout2.html"%}
+{%block content %}
+
+{%import "_macros.html" as macros%}
+
+<h1>Alumnos</h1>
+    <form action="" method="post" novalidate>
+        {{form.csrf_token }}
+        <input type="hidden" name="csrf_token" value="{{csrf_token()}}">
+
+        {{macros.input_Form(form.nombre,class="form-control")}}
+        {{macros.input_Form(form.apaterno,class="form-control")}}
+        
+        {{macros.input_Form(form.email,class="form-control")}}
+        
+
+<input type="submit" name="btn1">
     </form>
+    <h1>Nombre: {{nom}}</h1>
 
-    <h1>nombre {{nom}}</h1>
-    <h1>correo {{apa}}</h1>
-    <h1>correo {{correo}}</h1>
-
-
-    {% endblock %}
+{%endblock%}
